# zipzap

./: .gitignore  README.md  pyproject.toml
docs/: demo.cast
src/zipzap/: cli.py  exceptions.py
src/zipzap/compressor/: code_lengths.py  codebook.py  freq_counter.py  huffman_coder.py  huffman_tree.py
src/zipzap/ds/: array.py  entry.py  linked_list_nodes.py  position.py
src/zipzap/ds/bits/: bit_stream.py
src/zipzap/ds/deques/: deque.py  linked_deque.py
src/zipzap/ds/maps/: hashmap.py  map.py  probe_hashmap.py
src/zipzap/ds/priority_queues/: heap_priority_queue.py  priority_queue.py
src/zipzap/ds/trees/: binary_tree.py  linked_binary_tree.py  tree.py
src/zipzap/io/: config.py  reader.py  writer.py
src/zipzap/ui/: components.py  progress_timer.py  prompts.py
src/zipzap/utils/: logger.py
tests/compressor/: test_freq_counter.py  test_huffman_coder.py  test_huffman_tree.py
tests/ds/: test_array.py  test_binary_trees.py  test_bit_stream.py  test_deques.py  test_entry.py  test_hashmaps.py  test_linked_list_nodes.py  test_priority_queues.py
tests/io/: test_io.py
