[project]
name = "zipzap"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrian Lloyd Maagma",email = "110181829+andrianllmm@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "zipzap", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
