[project]
name = "zipzap"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrian Lloyd Maagma",email = "110181829+andrianllmm@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer (>=0.20.0,<0.21.0)",
    "rich (>=14.2.0,<15.0.0)"
]

[tool.poetry]
packages = [{include = "zipzap", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
mypy = "^1.19.0"
ruff = "^0.14.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
